<resources>
    <string name="account">Account</string>
    <string name="action_settings">Settings</string>
    <string name="add_card">Add Card</string>
    <string name="add_card_done">Add card successfully!</string>
    <string name="add_new_card">Add New Card</string>
    <string name="add_short_text">Add Short Text Message…(Max 150 Words)</string>
    <string name="address">Address</string>
    <string name="address_capital">Street Address</string>
    <string name="address_settings">Address Settings</string>
    <string name="agent_account">Agent Account</string>
    <string name="agree_terms_of_use">Please fill in form or accept terms of use</string>
    <string name="all_transactions">All Transactions</string>
    <string name="amazon_us_gift_cards">Amazon Us Gift Cards</string>
    <string name="app_name">Giftoga</string>
    <string name="apple_iTunes_gift_card">Apple iTunes Gift Card</string>
    <string name="application_name">GiftOga</string>
    <string name="bank_capital">Bank</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="business_name">Business Name</string>
    <string name="buy_and_cell_gift_cards_easily">Buy And Sell Gift Cards Easily</string>
    <string name="buy_cards">Buy Cards</string>
    <string name="buy_gift_cards">Buy Gift Cards</string>
    <string name="buy_gift_cards_from">Buy Gift Cards From Any Brand And Get It Instantly</string>
    <string name="buy_gift_cards_from_any_brand_and_send_to_multiple">Buy Gift Cards From Any Brand And Send To Multiple Users Instantly</string>
    <string name="buy_new_gift_card">Buy New Gift Card</string>
    <string name="buy_now">Buy Now</string>
    <string name="bvn">bvn</string>
    <string name="bvn_capital">BVN</string>
    <string name="card_number">Card Number</string>
    <string name="card_payment">Card Payment</string>
    <string name="change_avatar">Change avatar</string>
    <string name="choose_existing_photo">Choose Existing Photo</string>
    <string name="choose_from_existing_card">Choose From Existing Card</string>
    <string name="city">City</string>
    <string name="city_capital">City</string>
    <string name="city_hint">Your City</string>
    <string name="code">Code</string>
    <string name="code_hidden">xxxxx-xxxx-xxx-xxx</string>
    <string name="commission_balance">Commission Balance</string>
    <string name="complete_order">Complete Order</string>
    <string name="confirm_email_message">You\'re sending %1$s Amazon Gift Card to %2$s. Please confirm if the email address is correct</string>
    <string name="confirm_password_capital">Confirm Password</string>
    <string name="confirm_password_token">Token</string>
    <string name="confirm_transaction">Confirm Transaction</string>
    <string name="contact_subtitle">Reach out to our support team for support quickly</string>
    <string name="contact_support">Contact Support</string>
    <string name="continue_btn">Continue</string>
    <string name="copy_gift_card_code">Copy Gift Card Code</string>
    <string name="copy_to_clip_board">Copied giftcard code to Clipboard!</string>
    <string name="corporate_account">Corporate Account</string>
    <string name="cost_of_gift_card">Cost of Gift Card</string>
    <string name="countries">Countries</string>
    <string name="country">Country</string>
    <string name="country_capital">Country</string>
    <string name="country_code">+234</string>
    <string name="create_account">Create Account</string>
    <string name="create_custom_gift_cards">Create Custom Gift Cards</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="create_your_own_gift_cards">Create your own gift cards, integrate and sell on the go</string>
    <string name="creating_an_account_is_easy">Creating an account is easy, let\'s get you on board</string>
    <string name="cvv">CVV</string>
    <string name="date">Date</string>
    <string name="date_joined">Date Joined</string>
    <string name="debit_card">Debit Card</string>
    <string name="default_validation">Please fill in all fields!</string>
    <string name="delete_card">Delete Card</string>
    <string name="delete_card_done">Delete card successfully!</string>
    <string name="deposit_balance">Deposit Balance</string>
    <string name="discover_our_popular_merchants">Discover our Popular Merchants</string>
    <string name="easily_sell_and_track_sales">Easily sell and track sales of your gift cards all in one place</string>
    <string name="edit_card">Edit Card</string>
    <string name="email_address">Email Address</string>
    <string name="email_address_capital">Email Address</string>
    <string name="enter_amount">Amount</string>
    <string name="enter_maximum_amount">Maximum Amount is %1$s. Please decrease amount!</string>
    <string name="enter_custom_amount">Enter Custom Amount</string>
    <string name="enter_number">Enter Number (16 Digits)</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="enter_quality">Enter Quantity</string>
    <string name="enter_recipients_email">Enter Recipients Email Address</string>
    <string name="enter_recipients_name">Enter Recipients Name</string>
    <string name="enter_recipients_phone">Enter Recipient Phone Number</string>
    <string name="enter_the_code">Enter the code we sent to your email address : </string>
    <string name="example_purchase_success">You have successfully purchased N5,000 Amazon Gift Card</string>
    <string name="expiry_date">Expiry date</string>
    <string name="faq_subtitle">Read our support articles to see if your issue has already been solved</string>
    <string name="faq_support_articles"><![CDATA[FAQ & Support Articles]]></string>
    <string name="fifty_dollar">$50.00</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="firstname">First Name</string>
    <string name="firstname_capital">First Name</string>
    <string name="five_dollar">$5.00</string>
    <string name="from">From $50</string>
    <string name="full_name">Full Name</string>
    <string name="fund">Fund</string>
    <string name="fund_wallet">Fund Wallet</string>
    <string name="gift_card_purchase">N5000 Gift Card Purchase</string>
    <string name="gift_card_quantity">Gift Card Quantity</string>
    <string name="gift_card_sales">Gift Card Sales</string>
    <string name="gift_cards_for_everyone">Gift Cards For Everyone</string>
    <string name="giftcard_code">Giftcard Code</string>
    <string name="giftoga_card">GiftOga Card</string>
    <string name="good_morning_obi">"Good Morning, Obi "</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="hint_mmyy">mmyy</string>
    <string name="hundred_dollar">$100.00</string>
    <string name="i_have_read_and_agree">I have read and agree to </string>
    <string name="issue_title">Describe your issue</string>
    <string name="lastname">Last Name</string>
    <string name="lastname_capital">Last Name</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="login_subtitle">Creating an account is easy, let\'s get you on board</string>
    <string name="login_title">Welcome Back</string>
    <string name="looks_like_you_havent_bought_any_gift_cards_yet">Looks like you  haven\'t bought any gift cards yet.  You can buy one from the store instantly</string>
    <string name="manage_debit_cards_connected_to_your_account">Manage debit cards connected to your account</string>
    <string name="manage_details_of_your_giftOga_account">Manage details of your GiftOga Account</string>
    <string name="manage_details_of_your_personal_address">Manage details of your personal address</string>
    <string name="manage_your_account_security_seamlessly">Manage your account security seamlessly</string>
    <string name="method_paypal">Paypal</string>
    <string name="method_paystack">Paystack</string>
    <string name="method_bank_transfer">Bank Transfer</string>
    <string name="method_bank_transfer_title">Continue with Bank Transfer?</string>
    <string name="method_bank_transfer_description">Please pay your order %1$s to PAYALAT BANK, Account Number: %2$s | Account Name: %3$s</string>
    <string name="method_bank_transfer_done">Bank Transfer is Complete, Payment Token Number %1$s is used on sales with bank_transfer only</string>
    <string name="merchant_account">Merchant Account</string>
    <string name="message_for_re">MESSAGE FOR RECIPIENT</string>
    <string name="money_example">₦10,960,849.90</string>
    <string name="my_cards">My Cards</string>
    <string name="name_capital">Name</string>
    <string name="new_password_capital">New Password</string>
    <string name="next">Next</string>
    <string name="no_cards_found">No cards found!</string>
    <string name="no_change_email_address">No, Change Email Address</string>
    <string name="no_internet">No internet access!</string>
    <string name="no_more">No More!</string>
    <string name="of_giftoga">of GiftOga</string>
    <string name="okay">Okay</string>
    <string name="old_password_capital">Old Password</string>
    <string name="order_summary">Order Summary</string>
    <string name="otp">OTP</string>
    <string name="password">Password</string>
    <string name="password_hint">**********</string>
    <string name="password_length">• Password must contain a minimum of 8 characters\n</string>
    <string name="password_lowercase">• Password must contain a lower case letter\n</string>
    <string name="password_number">• Password must contain a number\n</string>
    <string name="password_reset_email_sent">Password Reset Email Sent</string>
    <string name="password_reset_email_sent_sub_title">An email has been sent to your email address. Follow directions in the email to reset your password.</string>
    <string name="password_special_character">• Password must contain a special character (Example: $,%,^,#,@)\n</string>
    <string name="password_uppercase">• Password must contain an upper case letter\n</string>
    <string name="pay">Pay</string>
    <string name="paypal_payment_title">Click Pay and Paypal Checkout will appear to complete your order</string>
    <string name="pay_with_card">Pay with Card</string>
    <string name="pay_with_wallet">Pay With Wallet</string>
    <string name="payment_information">Payment Information</string>
    <string name="personal_account">Personal Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_capital">Phone Number</string>
    <string name="pin">PIN</string>
    <string name="please_note_that_immediately_this">Please note that immediately this code is redeemed. This card can no longer be used and would be removed from your list of cards</string>
    <string name="please_select_an_account_type_to_sign_up_as">Please select an account type to sign up as</string>
    <string name="price_capital">Price</string>
    <string name="profile">Profile</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="purchase_gift_cards_instantly_from_the_store">Purchase gift cards instantly from the store</string>
    <string name="quantity">Quantity</string>
    <string name="sell_any_company_gift">Sell any company\'s Gift Cards here and get commissions for each sale</string>
    <string name="sell_your_own_gift_cards_directly_on_the_platform">Sell your own gift cards directly on the platform</string>
    <string name="todo">TODO</string>
    <string name="unknown_email">johnhunt4353@giftoga.com</string>
    <string name="verify_account">Verify Account</string>
    <string name="verify_account_title">Welcome To GiftOga, Glad to have you on board</string>
    <string name="verify_email">Verify Email</string>
    <string name="welcome_title">Hello %1$s</string>
</resources>