<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.globasure.giftoga.ui.screen.authentication.welcome.WelcomeFragViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            style="@style/poppins_semibold_36"
            android:layout_marginTop="60dp"
            android:text="@string/application_name"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/create_your_account"
            style="@style/poppins_semibold_36"
            android:layout_marginTop="@dimen/_180sdp"
            tools:text="@string/welcome_title"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/please_select_an_account"
            style="@style/heebo_regular_14_blue"
            android:layout_width="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:textSize="14sp"
            android:gravity="center_horizontal"
            android:text="@string/verify_account_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_your_account" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continueBtn"
            style="@style/button_round"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/continue_btn"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/please_select_an_account"
            tools:ignore="Autofill,LabelFor" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_60sdp"
            android:scaleType="fitEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/continueBtn"
            app:srcCompat="@drawable/ic_splash_screen"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>